some more structure

--- a/index.html
+++ b/index.html
@@ -3,3 +3,47 @@ title: Home
 layout: default
 ---
 
+<div class="jumbotron">
+	<h1></h1>
+	<p></p>
+	<p><a href="#" class="btn btn-primary btn-lg" role="button">Become a Member</a></p>
+</div>
+
+<div class="well">
+	<h1>Latest from our Blog</h1>
+	<div class="row">
+		<div class="col-xs-6 col-md-3">
+			<a href="#" class="thumbnail">
+				<img src="" alt="">
+			</a>
+			<p><strong>Post Title</strong></p>
+			<p>Date</p>
+			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+		</div>
+		<div class="col-xs-6 col-md-3">
+			<a href="#" class="thumbnail">
+				<img src="" alt="">
+			</a>
+			<p><strong>Post Title</strong></p>
+			<p>Date</p>
+			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+		</div>
+		<div class="col-xs-6 col-md-3">
+			<a href="#" class="thumbnail">
+				<img src="" alt="">
+			</a>
+			<p><strong>Post Title</strong></p>
+			<p>Date</p>
+			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+		</div>
+				<div class="col-xs-6 col-md-3">
+			<a href="#" class="thumbnail">
+				<img src="" alt="">
+			</a>
+			<p><strong>Post Title</strong></p>
+			<p>Date</p>
+			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
+		</div>
+	</div>
+
+</div>
