--- a/about.html
+++ b/about.html
@@ -4,12 +4,19 @@ layout: default
 ---
 
 <div class="well">
+	<h1>The Organisation</h1>
+	<p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+</div>
+
+<div class="well">
 	<h1>The Executive</h1>
 	<div class="row">
 		<div class="col-xs-6 col-md-3">
 			<a href="#" class="thumbnail">
 				<img src="11666160_946096528780467_8451455082194227706_n.jpg" alt="">
 			</a>
+			<p><strong>Pascal Aloisio</strong></p>
+			<p><strong>Publications Officer</strong></p>
 			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
 		</div>
 		<div class="col-xs-6 col-md-3">
