--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 ---
 
 <div class="jumbotron">
-	<h1></h1>
+	<h1>About us</h1>
 	<p></p>
 	<p><a href="#" class="btn btn-primary btn-lg" role="button">Become a Member</a></p>
 </div>
@@ -36,7 +36,7 @@ layout: default
 			<p>Date</p>
 			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
 		</div>
-				<div class="col-xs-6 col-md-3">
+		<div class="col-xs-6 col-md-3">
 			<a href="#" class="thumbnail">
 				<img src="" alt="">
 			</a>
@@ -45,5 +45,4 @@ layout: default
 			Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.
 		</div>
 	</div>
-
 </div>
