fill in contact page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@ layout: default
 
 <div class="jumbotron">
 	<h1>About us</h1>
-	<p></p>
-	<p><a href="#" class="btn btn-primary btn-lg" role="button">Become a Member</a></p>
+	<p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon azuki bean garlic.</p>
+	<p>Sound interesting?</p>
+	<a href="#" class="btn btn-primary btn-lg" role="button">Become a Member</a>
 </div>
 
 <div class="well">
